SERVER-64764 Fix '$$ROOT' handling in $expr rewrite